tests/NormalTests/paczka2/big_fuzzy/43647561.err
Error in line 2: mJ3D4lwZs S691 65,1
Error in line 9: zq58ynkROv A15 49,6
Error in line 12: S823 S691 30,6
Error in line 21: tu9NhMruGoS S270 56,6
Error in line 28: uCH S270 86,10
Error in line 29: S823 A15 58,8
Error in line 38: c2Yfar S270 19,4
Error in line 32: SqZ A15 58,5
Error in line 43: zq58ynkROv S691 13,2
Error in line 41: SqZ S691 74,4
Error in line 17: uCH S270 59,3
Error in line 58: c2Yfar S823 9,7
Error in line 62: uCH S270 99,1
Error in line 71: tu9NhMruGoS 15 31,6
Error in line 80: uCH S270 16,0
Error in line 87: S823 S823 259,0
Error in line 95: uCH S691 62,3
Error in line 98: uCH S823 89,0
Error in line 91: SqZ S270 43,4
Error in line 100: S823 S270 36,5
Error in line 105: S823 S691 30,5
Error in line 111: SqZ A15 69,5
Error in line 126: c2Yfar S270 75,3
Error in line 134: tu9NhMruGoS S270 40,2
Error in line 143: tu9NhMruGoS A15 49,0
Error in line 124: S823 S691 88,5
Error in line 163: zq58ynkROv A15 20,8
Error in line 168: uCH S270 89,6
Error in line 175: SqZ S270 50,6
Error in line 184: zq58ynkROv S691 66,2
Error in line 187: zq58ynkROv S823 13,0
Error in line 162: mJ3D4lwZs S691 142,3
Error in line 198: mJ3D4lwZs S823 77,6
Error in line 218: uCH A15 48,3
Error in line 219: uCH S691 31,8
Error in line 224: mJ3D4lwZs S823 46,8
Error in line 220: uCH S270 23,0
Error in line 206: SqZ S691 5,9
Error in line 230: uCH A15 68,2
Error in line 245: uCH A15 13,0
Error in line 237: zq58ynkROv S270 22,8
Error in line 249: SqZ S691 164,20
